test/sematest/invalid/assign_to_binop.java
class A {
  public static void main(String[] args) {
    int a = 0;
    a + a = a;
  }
}
